--- a/juegos.html
+++ b/juegos.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Decoración</title>
+  <title>Juegos</title>
   <link rel="stylesheet" href="style.css"/>
+  <script type="module" src="firebase.js"></script>
 </head>
 <body>
   <div id="header-container"></div>
 
   <main>
-    <h1 class="page-title">Decoración 🪅</h1>
+    <h1 class="page-title">Juegos 🎲</h1>
     <div id="catalogo-container" class="catalogo-grid"></div>
   </main>
 
@@ -18,7 +19,7 @@
   <script src="script.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      cargarProductos('decoracion');
+      cargarProductos('juegos');
     });
   </script>
 </body>
