Login del principio

--- a/header.html
+++ b/header.html
@@ -26,13 +26,13 @@
     </div>
 
     <div class="user-actions" style="position: relative; display: flex; align-items: center; gap: 20px;">
-      <!-- Botón iniciar sesión -->
+      <!-- Botón iniciar sesión SIN CAMBIOS: mantiene el onclick -->
       <div class="perfil-container" id="loginBtn" onclick="window.location.href='login.html'" style="cursor:pointer; display:flex; align-items:center;">
         <span class="perfil-icon">👤</span>
         <span class="perfil-text" style="margin-left:6px;">Iniciar sesión</span>
       </div>
 
-      <!-- Perfil usuario con nombre y menú desplegable -->
+      <!-- Contenedor usuario con nombre y menú desplegable -->
       <div class="perfil-container" id="userProfile" style="display:none; cursor:pointer; align-items:center; gap: 4px; font-weight:700; position: relative;">
         <span id="userName"></span>
         <span id="userTriangle" style="font-weight: 900; user-select:none;">▼</span>
@@ -89,14 +89,59 @@
   </aside>
 
   <script type="module">
-    import { initAuthUI } from './Inicisesion.js';
+    import { onAuthState, logoutUser, db, collection, query, where, getDocs } from './firebase.js';
 
-    initAuthUI({
-      loginBtnSelector: '#loginBtn',
-      userProfileSelector: '#userProfile',
-      userNameSelector: '#userName',
-      userMenuSelector: '#userMenu',
-      logoutBtnSelector: '#logoutBtn'
+    const loginBtn = document.getElementById('loginBtn');
+    const userProfile = document.getElementById('userProfile');
+    const userNameSpan = document.getElementById('userName');
+    const userMenu = document.getElementById('userMenu');
+    const logoutBtn = document.getElementById('logoutBtn');
+
+    userProfile.addEventListener('click', () => {
+      userMenu.style.display = userMenu.style.display === 'block' ? 'none' : 'block';
+    });
+
+    document.addEventListener('click', (e) => {
+      if (!userProfile.contains(e.target)) {
+        userMenu.style.display = 'none';
+      }
+    });
+
+    onAuthState(async (user) => {
+      if (user) {
+        loginBtn.style.display = 'none';
+        userProfile.style.display = 'flex';
+        userMenu.style.display = 'none';
+
+        try {
+          const usuariosRef = collection(db, 'usuarios');
+          const q = query(usuariosRef, where('uid', '==', user.uid));
+          const querySnapshot = await getDocs(q);
+
+          let nombreCompleto = '';
+          if (!querySnapshot.empty) {
+            nombreCompleto = querySnapshot.docs[0].data().nombre || user.email;
+          } else {
+            nombreCompleto = user.email;
+          }
+
+          const primerNombre = nombreCompleto.split(' ')[0];
+          userNameSpan.textContent = primerNombre;
+
+        } catch (error) {
+          console.error('Error al obtener usuario:', error);
+          userNameSpan.textContent = user.email.split('@')[0];
+        }
+      } else {
+        loginBtn.style.display = 'flex';
+        userProfile.style.display = 'none';
+        userMenu.style.display = 'none';
+      }
+    });
+
+    logoutBtn.addEventListener('click', async () => {
+      await logoutUser();
+      window.location.reload();
     });
   </script>
 
@@ -106,5 +151,4 @@
     }
   </script>
 </header>
-
 
