Inicio de sesión completo

--- a/carrito.html
+++ b/carrito.html
@@ -79,7 +79,11 @@
     </style>
 </head>
 <body class="p-4 md:p-8">
-    
+<script>
+    window.addEventListener('DOMContentLoaded', () => {
+        document.body.classList.add('loaded');
+    });
+</script>
     <div class="max-w-7xl mx-auto">
         <h1 class="text-3xl font-extrabold text-gray-800 mb-6 border-b pb-2">Finalizar Compra</h1>
         
