--- a/decoracion.html
+++ b/decoracion.html
@@ -5,23 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Decoración</title>
   <link rel="stylesheet" href="style.css"/>
-  <script type="module" src="firebase.js"></script>
 </head>
 <body>
-  <div id="header-container"></div>
+<script>
+  window.addEventListener('DOMContentLoaded', () => {
+    document.body.classList.add('loaded');
+  });
+</script>
 
-  <main>
-    <h1 class="page-title">Decoración 🪅</h1>
-    <div id="catalogo-container" class="catalogo-grid"></div>
-  </main>
+<script>
+  window.addEventListener('DOMContentLoaded', () => {
+    document.body.classList.add('loaded');
+  });
+</script>
+<div id="header-container"></div>
+<!-- ✅ Cargar el header con Firebase -->
+<script type="module">
+  import { iniciarHeaderConFirebase } from './header.js';
 
-  <div id="footer-container"></div>
-  <script src="script.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      cargarProductos('decoracion');
-    });
-  </script>
-  <script type="module" src="./header.js"></script>
+  document.addEventListener('DOMContentLoaded', () => {
+    iniciarHeaderConFirebase();
+  });
+</script>
+<main>
+  <h1 class="page-title">Decoración 🪅</h1>
+  <div id="catalogo-container" class="catalogo-grid"></div>
+</main>
+<div id="footer-container"></div>
+<!-- ✅ Script del catálogo -->
+<script src="script.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    cargarProductos('decoracion');
+  });
+</script>
 </body>
 </html>
