Corección de Login y Registro existoso

--- a/login.html
+++ b/login.html
@@ -59,6 +59,10 @@
       }
     });
   </script>
-
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+        document.body.classList.add('loaded');
+    });
+</script>
 </body>
 </html>
