Errores en las funciones del carrito, menú hamburguesa de movil y demás ya están corregidas y funcionan perfectamente desde local

--- a/header.html
+++ b/header.html
@@ -64,7 +64,7 @@
       <!-- Carrito -->
       <div class="carrito-container" style="position: relative;">
         <button id="carrito-btn" class="carrito-btn" aria-label="Carrito de compras">🛒 <span id="carrito-count">0</span></button>
-        <div id="carrito-popup" class="carrito-popup" style="display:none; position:absolute; right:0; background:white; border:1px solid #ccc; border-radius:8px; width: 280px; max-height: 350px; overflow-y: auto; box-shadow: 0 4px 12px rgba(0,0,0,0.1); z-index: 150;"></div>
+        <div id="carrito-popup" class="carrito-popup" style="position:absolute; right:0; background:white; border:1px solid #ccc; border-radius:8px; width: 280px; max-height: 350px; overflow-y: auto; box-shadow: 0 4px 12px rgba(0,0,0,0.1); z-index: 150;"></div>
       </div>
     </div>
   </nav>
