Vinculación carrito EXITOSA

--- a/catalogo.html
+++ b/catalogo.html
@@ -29,12 +29,13 @@
 
   <div id="footer-container"></div>
   <!-- ✅ Script general -->
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
   <!-- ✅ Cargar catálogo -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       cargarProductos(); // Sin categoría => carga todo
     });
   </script>
+  <script type="module" src="loginCarrito.js"></script>
 </body>
 </html>
