Insertar Cookies EXISTOSO

--- a/index.html
+++ b/index.html
@@ -665,6 +665,24 @@
       loadSlides();
     })();
   </script>
+  <div id="cookieOverlay" class="cookie-overlay">
+  <div class="cookie-modal">
+    <img src="https://cdn-icons-png.flaticon.com/512/1047/1047711.png" alt="Cookie" class="cookie-img">
+    
+    <p class="cookie-text">
+      Usamos cookies para mejorar tu experiencia en DakotaParty. Algunas son esenciales 
+      para el funcionamiento del sitio, mientras que otras nos ayudan a analizar el uso y 
+      personalizar contenido. ¿Aceptas el uso de cookies?
+    </p>
+    
+    <div class="cookie-buttons">
+      <button id="btnAceptar" class="btn-cookie accept">ACEPTAR</button>
+      <button id="btnRechazar" class="btn-cookie reject">RECHAZAR</button>
+    </div>
+  </div>
+</div>
+
+<script src="cookies.js"></script>
 </body>
 </html>
 </body>
